Port columnar filter changes from OSS
Aligns cork code with OSS to make upgrade easier
Enables columnar filter evaluation by default

(cherry picked from commit 57604d1472b9faf6108e927cbcdca5d4f9cf246b)